<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhotoQuest</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="people">People</string>
    <string name="photoquests">Photoquests</string>
    <string name="log_out">Log out</string>
    <string name="logout_progress_message">Logging out</string>
    <string name="login_progress_message">Logging in…</string>
    <string name="all">All</string>
    <string name="created">Created</string>
    <string name="following">Following</string>
    <string name="performed">Performed</string>
    <string name="friends">Friends</string>
    <string name="received_requests">Received</string>
    <string name="sent_requests">Sent</string>
    <string name="photos">Photos</string>
    <string name="like_it">%d like it!</string>
    <string name="publish_photo_feed_description">Published photo on %s photoquest</string>
    <string name="create_photoquest_feed_description">Created photoquest %s</string>
    <string name="profile">Profile</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="news">News</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="register_login">Login</string>
    <string name="register_password">Password</string>
    <string name="register_name">Name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_gender">Gender</string>
    <string name="register_country">Country</string>
    <string name="register_city">City</string>
    <string name="register_button">Register</string>
    <string name="please_wait">Please, wait...</string>
    <string name="messages">Messages</string>
    <string name="comment_action">commented your photo</string>
    <string name="like_action">liked your photo</string>
    <string name="accept_request_action">accepted your friend request</string>
    <string name="decline_request_action">declined your friend request</string>
    <string name="replies">Replies</string>
    <string name="send_button">Send</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_adding_date">Sort by adding date</string>
    <string name="sort">Sort</string>
    <string name="sort_hottest">Hottest</string>
    <string name="sort_photo_adding_date">Newest</string>
    <string name="sort_photo_rating">Most Rated</string>
    <string name="friends_photos">Friends</string>
    <string name="mine">Mine</string>
    <string name="add_friend">Add Friend</string>
    <string name="write_message">Write Message</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
