<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TextView android:text="@string/register_login"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <EditText android:id="@+id/login"
                  android:layout_width="300dp"
                  android:layout_height="50dp"/>
        <TextView android:text="@string/register_password"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <EditText android:id="@+id/password"
                  android:layout_width="300dp"
                  android:layout_height="50dp"/>
        <TextView android:text="@string/register_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <EditText android:id="@+id/name"
                  android:layout_width="300dp"
                  android:layout_height="50dp"/>
        <TextView android:text="@string/register_last_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <EditText android:id="@+id/lastName"
                  android:layout_width="300dp"
                  android:layout_height="50dp"/>
        <TextView android:text="@string/register_gender"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/gender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
        <TextView android:text="@string/register_country"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <com.utilsframework.android.view.EditTextWithSuggestions
                android:id="@+id/country"
                android:layout_width="300dp"
                android:layout_height="50dp"/>
        <TextView android:text="@string/register_city"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <com.utilsframework.android.view.EditTextWithSuggestions
                android:id="@+id/city"
                android:layout_width="300dp"
                android:layout_height="50dp"/>
        <ImageView android:id="@+id/captcha"
                   android:layout_width="200dp"
                   android:layout_height="50dp"/>
        <EditText android:id="@+id/captchaCode"
                  android:layout_width="300dp"
                  android:layout_height="50dp"/>
        <Button android:id="@+id/register"
                android:text="@string/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
